--- a/main.css
+++ b/main.css
@@ -19,6 +19,8 @@ a:hover{
 
 }
 
+
+
 .header{
     width: 100%;
     height: 10vh;
@@ -27,6 +29,10 @@ a:hover{
     padding-left: 5%;
     padding-right: 5%;
     margin: 0;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+
 }
 
 .logo-con{
@@ -45,7 +51,7 @@ a:hover{
 .title-con{
 
     height: 8vh;
-    width: 10%;
+    width: 15%;
     float: left;
     margin-left: 1%;
     text-align: center;
@@ -62,7 +68,7 @@ a:hover{
 .spacer-con{
 
     height: 8vh;
-    width: 40%;
+    width: 35%;
     float: left;
     margin-left: 4%;
     
@@ -74,10 +80,9 @@ a:hover{
     height: 8vh;
     width: 25%;
     float: left;
-    margin-left: 5%;
+    margin-left: 15%;
     text-align: right;
     vertical-align: middle;
-
 }
 
 .nav{
@@ -90,6 +95,8 @@ a:hover{
 
 }
 
+
+
 .footer{
 
     width: 100%;
@@ -97,15 +104,18 @@ a:hover{
     float: left;
     padding-left: 5%;
     padding-right: 5%;
-    padding-top: 1vh;
+    padding-top: 3vh;
+    margin-bottom: 5vh;
     color: #424242;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .foot-links{
 
     width: 50%;
     height: 8vh;
-
     float: left;
 
 }
@@ -121,7 +131,7 @@ a:hover{
     width: 20%;
     height: 8vh;
     float: left;
-    margin-left: 20%;
+    margin-left: 30%;
     text-align: right;
     vertical-align: middle;
     padding: 0;
@@ -202,6 +212,41 @@ a:hover{
 
 }
 
+.img-1:hover{
+    color: #C2E5EB;
+}
+
+.img-2:hover{
+    color: #f6a45a;
+}
+
+
+.img-3:hover{
+    color: #C2E5EB;
+}
+
+
+.img-4:hover{
+    color: #f6a45a;
+}
+
+
+.img-5:hover{
+    color: #C2E5EB;
+}
+
+.img-6:hover{
+    color: #f6a45a;
+}
+
+.img-7:hover{
+    color: #C2E5EB;
+}
+
+.img-8:hover{
+    color: #f6a45a;
+}
+
 .image-1{
 
     width: 100%;
@@ -212,6 +257,8 @@ a:hover{
     background-size: cover;
     background-position: bottom;
     background-image: url(./img/1.jpg);
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .title-1{
@@ -219,6 +266,8 @@ a:hover{
     height: 10%;
     float: left;
     text-align: left;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .image-2{
@@ -231,6 +280,8 @@ a:hover{
     background-size: cover;
     background-position: center;
     background-image: url(./img/2.jpg);
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .title-2{
@@ -238,6 +289,8 @@ a:hover{
     height: 10%;
     float: left;
     background-color: #f4f4f4;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .image-3{
@@ -250,6 +303,8 @@ a:hover{
     background-size: cover;
     background-position: center;
     background-image: url(./img/3.jpg);
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .title-3{
@@ -257,6 +312,8 @@ a:hover{
     height: 10%;
     float: left;
     background-color: #f4f4f4;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .image-4{
@@ -269,6 +326,8 @@ a:hover{
     background-size: cover;
     background-position: bottom;
     background-image: url(./img/4.jpg);
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .title-4{
@@ -276,6 +335,8 @@ a:hover{
     height: 10%;
     float: left;
     background-color: #f4f4f4;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .image-5{
@@ -288,6 +349,8 @@ a:hover{
     background-size: cover;
     background-position: center;
     background-image: url(./img/5.jpg);
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .title-5{
@@ -295,6 +358,8 @@ a:hover{
     height: 10%;
     float: left;
     background-color: #f4f4f4;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .image-6{
@@ -307,6 +372,8 @@ a:hover{
     background-size: cover;
     background-position: center;
     background-image: url(./img/6.jpg);
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .title-6{
@@ -314,6 +381,8 @@ a:hover{
     height: 10%;
     float: left;
     background-color: #f4f4f4;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .image-7{
@@ -326,6 +395,8 @@ a:hover{
     background-size: cover;
     background-position: center;
     background-image: url(./img/7.jpg);
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .title-7{
@@ -333,6 +404,8 @@ a:hover{
     height: 10%;
     float: left;
     background-color: #f4f4f4;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .image-8{
@@ -345,6 +418,8 @@ a:hover{
     background-size: cover;
     background-position: center;
     background-image: url(./img/8.jpg);
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .title-8{
@@ -352,6 +427,8 @@ a:hover{
     height: 10%;
     float: left;
     background-color: #f4f4f4;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
 
 .img-2{
